<resources>
    <string name="app_name">Semana02 Aula 06 SplashScreen</string>
    <string name="msg">Que a força esteja com você!</string>

    <string name="btnVoltar">Voltar</string>
    <string name="btnSair">Sair</string>

    <string name="meuProjeto">Curso Android 2016</string>

    <string name="txtTitulo">Cadastro do Cliente</string>
    <string name="txtNome">Nome Completo</string>
    <string name="txtCidade">Cidade</string>
    <string name="txtUF">UF</string>
    <string name="txtProfissao">Profissão</string>
    <string name="txtEmpresa">Nome da Empresa</string>
    <string name="txtTelefone">Telefone</string>
    <string name="txtEmail">E-mail</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnLimpar">Limpar</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dash">Dashboard</string>
    <string name="bntTitulo">Consultar Clientes</string>
    <string name="btnAdicionar">Adicinar Clientes</string>
    <string name="btnAlterar">Alterar Clientes</string>
    <string name="btnDeletar">Deletar Clientes</string>

</resources>
